--- a/continuous_probabilistic_methods.ipynb
+++ b/continuous_probabilistic_methods.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "990fe4d1",
+   "id": "7b8b7541",
    "metadata": {},
    "source": [
     "# Continuous Probabilistic Methods Exercises\n",
@@ -14,7 +14,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "043ef2ce",
+   "id": "876150ff",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,10 +26,11 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "ac6e1fb6",
+   "id": "4425fdba",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# define function to get upper and lower bounds\n",
     "def get_lower_and_upper_bounds(series, multiplier=1.5):\n",
     "    '''\n",
     "    This function takes in a series and a multiplier (default=1.5). It returns\n",
@@ -45,7 +46,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d036c69e",
+   "id": "2c29da6d",
    "metadata": {},
    "source": [
     "---\n",
@@ -57,7 +58,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "9238eb30",
+   "id": "fafb20f9",
    "metadata": {},
    "outputs": [
     {
@@ -168,7 +169,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "269531bc",
+   "id": "a843c6a4",
    "metadata": {},
    "outputs": [
     {
@@ -200,7 +201,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "08697d4b",
+   "id": "cf7a5fcd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,7 +216,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "2327b68a",
+   "id": "4e5c73a5",
    "metadata": {
     "scrolled": true
    },
@@ -294,7 +295,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "2b136661",
+   "id": "06031e7c",
    "metadata": {},
    "outputs": [
     {
@@ -777,7 +778,7 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "621366bf",
+   "id": "2401eff7",
    "metadata": {},
    "outputs": [
     {
@@ -847,8 +848,13 @@
     }
    ],
    "source": [
-    "# modify function to get only lower outliers\n",
+    "# modify function to get only upper/lower outliers\n",
     "def get_outliers(df, multiplier=1.5, bound='both'):\n",
+    "    '''\n",
+    "    This function takes in a dataframe, a multiplier (default=1.5), and a boundary\n",
+    "    direction ('upper', 'lower', default='both') and returns a dataframe of outliers\n",
+    "    based on which bound was specified.\n",
+    "    '''\n",
     "    outliers = pd.DataFrame()\n",
     "    if bound == 'both':\n",
     "        # Create a for loop that will iterate through the list of quantitative values calculating the IQR value\n",
@@ -888,16 +894,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "89bdbbc5",
+   "id": "b4497a68",
    "metadata": {},
    "source": [
+    "The outlier on 12/31/17 makes sense; all values seem to be within reasonable limits. However, the outlier on 11/21/17 has a negative value for `Flyers`, which doesn't make sense since you can't have a negative amount of physical objects. Therefore, it makes sense to me to keep the outlier on 12/31/17 and to get rid of the outlier on 11/21/17 since that was probably a mistake.\n",
+    "\n",
     "#### Use the IQR Range Rule and the upper and upper bounds to identify the upper outliers of each column of `lemonade.csv`, using the multiplier of 1.5. Do these upper outliers make sense? Which outliers should be kept?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
-   "id": "d66a289c",
+   "execution_count": 79,
+   "id": "a6c1141c",
    "metadata": {},
    "outputs": [
     {
@@ -1324,7 +1332,7 @@
        "184    7/4/17    Tuesday         84.2      0.59      49    0.5    534"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1337,7 +1345,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "adcfd508",
+   "id": "a5d70a25",
    "metadata": {},
    "outputs": [
     {
@@ -1776,16 +1784,22 @@
   },
   {
    "cell_type": "markdown",
-   "id": "af109f05",
+   "id": "10ce693a",
    "metadata": {},
    "source": [
+    "2/11/17 has a temperature of 212 which does not make sense because that would mean a catastrophic event occurred and I doubt updating the lemonade sales for the day would be on any survivors' to-do lists. Even if the csv was updated automatically it's unlikely this occurred since there are still lemonade sales after that date, suggesting human life did not come to an end, so I would definitely drop this record. \n",
+    "\n",
+    "Additionally, the last 4 outliers in the dataframe above are suspicious since no other dates have sales in the triple digits. It could be the case that the lemonade seller was invited to sell their lemonade at a Fourth of July event and had a lot more customers than usual. However, since this still isn't really representative of their normal lemonade sales I would likely drop these outliers.\n",
+    "\n",
+    "As for the higher numbers in the `Flyers` and `Rainfall` columns, I don't think these numbers are unrealistic so I would be inclined to keep those.\n",
+    "\n",
     "#### Using the multiplier of 3, IQR Range Rule, and the lower bounds, identify the outliers below the lower bound in each colum of `lemonade.csv`. Do these lower outliers make sense? Which outliers should be kept?"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 76,
-   "id": "ff6600a0",
+   "id": "0f2c38cc",
    "metadata": {},
    "outputs": [
     {
@@ -1849,16 +1863,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5017a15c",
+   "id": "9813b9b8",
    "metadata": {},
    "source": [
+    "When using a multiplier of 3, the only lower-bound outlier is on 11/21/17 which was the day with a negative value for `Flyers`. This doesn't make sense so I wouldn't keep any of the lower-bound outliers with a multiplier of 3.\n",
+    "\n",
     "#### Using the multiplier of 3, IQR Range Rule, and the upper bounds, identify the outliers above the upper_bound in each colum of `lemonade.csv`. Do these upper outliers make sense? Which outliers should be kept?"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 77,
-   "id": "5c54e4cd",
+   "id": "4b75254b",
    "metadata": {},
    "outputs": [
     {
@@ -2010,9 +2026,11 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dc7698f0",
+   "id": "7fc700ff",
    "metadata": {},
    "source": [
+    "My sentiments are the same as when the multiplier was 1.5; I would drop the first and last 4 records in \n",
+    "\n",
     "### 2. Identify if any columns in `lemonade.csv` are normally distributed. For normally distributed columns:\n",
     "\n",
     "#### Use a 2 sigma decision rule to isolate the outliers.\n",
@@ -2023,7 +2041,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "6332f8ca",
+   "id": "7ab873b1",
    "metadata": {},
    "outputs": [
     {
@@ -2045,7 +2063,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e3c13c5d",
+   "id": "7f70f37d",
    "metadata": {},
    "source": [
     "### 3. Now use a 3 sigma decision rule to isolate the outliers in the normally distributed columns from `lemonade.csv`"
@@ -2054,7 +2072,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9cf88fd5",
+   "id": "9e69700a",
    "metadata": {},
    "outputs": [],
    "source": []
