Added code comment, restarted kernel

--- a/continuous_probabilistic_methods.ipynb
+++ b/continuous_probabilistic_methods.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "a2dd583b",
+   "id": "1a0385ef",
    "metadata": {},
    "source": [
     "# Continuous Probabilistic Methods Exercises\n",
@@ -13,8 +13,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "id": "45084bd7",
+   "execution_count": 1,
+   "id": "88d13186",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,8 +25,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "2b1f752d",
+   "execution_count": 2,
+   "id": "9269020f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bf6fe604",
+   "id": "4867b2c5",
    "metadata": {},
    "source": [
     "---\n",
@@ -57,8 +57,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "1260747e",
+   "execution_count": 3,
+   "id": "d657d281",
    "metadata": {},
    "outputs": [
     {
@@ -155,7 +155,7 @@
        "4  1/5/17   Thursday         42.4      1.00      33    0.5     18"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -168,8 +168,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "bec85bcb",
+   "execution_count": 4,
+   "id": "5568b196",
    "metadata": {},
    "outputs": [
     {
@@ -200,8 +200,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
-   "id": "0b51533c",
+   "execution_count": 5,
+   "id": "4030e02a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,8 +215,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
-   "id": "54dfe988",
+   "execution_count": 6,
+   "id": "7c437bac",
    "metadata": {
     "scrolled": true
    },
@@ -282,7 +282,7 @@
        "324  11/21/17  Tuesday         47.0      0.95     -38    0.5     20"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -294,8 +294,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
-   "id": "8d25161e",
+   "execution_count": 7,
+   "id": "e9740167",
    "metadata": {},
    "outputs": [
     {
@@ -744,7 +744,7 @@
        "184    7/4/17    Tuesday         84.2      0.59      49    0.5    534"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -758,8 +758,8 @@
     "    a dataframe of both upper- and lower-bound outliers.\n",
     "    '''\n",
     "    outliers = pd.DataFrame()\n",
-    "        # Create a for loop that will iterate through the list of quantitative values calculating the IQR value\n",
-    "        # and setting the upper and lower limits. \n",
+    "    # Create a for loop that will iterate through the list of quantitative values calculating the IQR value\n",
+    "    # and setting the upper and lower limits. \n",
     "    for col in df.select_dtypes(include=['int64', 'float64']).columns:\n",
     "        q1 = df[col].quantile(0.25)\n",
     "        q3 = df[col].quantile(0.75)\n",
@@ -777,8 +777,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
-   "id": "540d1636",
+   "execution_count": 8,
+   "id": "a11f040c",
    "metadata": {},
    "outputs": [
     {
@@ -842,7 +842,7 @@
        "324  11/21/17  Tuesday         47.0      0.95     -38    0.5     20"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -894,7 +894,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "59d0d052",
+   "id": "21dfc04a",
    "metadata": {},
    "source": [
     "The outlier on 12/31/17 makes sense; all values seem to be within reasonable limits. However, the outlier on 11/21/17 has a negative value for `Flyers`, which doesn't make sense since you can't have a negative amount of physical objects. Therefore, it makes sense to me to keep the outlier on 12/31/17 and to get rid of the outlier on 11/21/17 since that was probably a mistake.\n",
@@ -904,8 +904,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
-   "id": "cf5302bc",
+   "execution_count": 9,
+   "id": "a46a84bb",
    "metadata": {},
    "outputs": [
     {
@@ -1332,7 +1332,7 @@
        "184    7/4/17    Tuesday         84.2      0.59      49    0.5    534"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1344,8 +1344,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
-   "id": "5e38d90c",
+   "execution_count": 10,
+   "id": "4f5b6bc3",
    "metadata": {},
    "outputs": [
     {
@@ -1772,7 +1772,7 @@
        "184    7/4/17    Tuesday         84.2      0.59      49    0.5    534"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1784,7 +1784,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f6652128",
+   "id": "e6bf9a8c",
    "metadata": {},
    "source": [
     "2/11/17 has a temperature of 212 which does not make sense because that would mean a catastrophic event occurred and I doubt updating the lemonade sales for the day would be on any survivors' to-do lists. Even if the csv was updated automatically it's unlikely this occurred since there are still lemonade sales after that date, suggesting human life did not come to an end, so I would definitely drop this record. \n",
@@ -1798,8 +1798,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
-   "id": "9bc85269",
+   "execution_count": 11,
+   "id": "8784f490",
    "metadata": {},
    "outputs": [
     {
@@ -1852,7 +1852,7 @@
        "324  11/21/17  Tuesday         47.0      0.95     -38    0.5     20"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1864,7 +1864,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3f0198e5",
+   "id": "98c442b9",
    "metadata": {},
    "source": [
     "When using a multiplier of 3, the only lower-bound outlier is on 11/21/17 which was the day with a negative value for `Flyers`. This doesn't make sense so I wouldn't keep any of the lower-bound outliers with a multiplier of 3.\n",
@@ -1874,8 +1874,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
-   "id": "1f981f71",
+   "execution_count": 12,
+   "id": "4d0a5564",
    "metadata": {},
    "outputs": [
     {
@@ -2016,7 +2016,7 @@
        "184    7/4/17   Tuesday         84.2      0.59      49    0.5    534"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2028,7 +2028,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6ce0e061",
+   "id": "ac1faf63",
    "metadata": {},
    "source": [
     "My sentiments are the same as when the multiplier was 1.5; I would only drop the first and last 4 records in the dataframe above (2/11/17 and 7/1-4/2017).\n",
@@ -2042,8 +2042,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
-   "id": "41f225ef",
+   "execution_count": 13,
+   "id": "37833f63",
    "metadata": {},
    "outputs": [
     {
@@ -2066,7 +2066,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1bc8a927",
+   "id": "07fa9113",
    "metadata": {},
    "source": [
     "I see that Sales does not appear to be normally distributed, but I'm not sure if this is just because of the outliers. I want to look at it a little closer without those outliers."
@@ -2074,8 +2074,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
-   "id": "3545e208",
+   "execution_count": 14,
+   "id": "3f46809c",
    "metadata": {},
    "outputs": [
     {
@@ -2084,7 +2084,7 @@
        "<AxesSubplot:>"
       ]
      },
-     "execution_count": 118,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2102,12 +2102,13 @@
     }
    ],
    "source": [
+    "# view distribution without outliers\n",
     "lemonade[lemonade.Sales < 140].Sales.hist()"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "4201d9a0",
+   "id": "c0d30323",
    "metadata": {},
    "source": [
     "Looks like Sales is also normally distributed, except for those pesky outliers. I'll go ahead and include it in my list of normally distributed columns."
@@ -2115,8 +2116,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
-   "id": "6058e0d3",
+   "execution_count": 15,
+   "id": "f0c82246",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2126,8 +2127,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
-   "id": "aa6f1143",
+   "execution_count": 16,
+   "id": "9bdf45ad",
    "metadata": {},
    "outputs": [
     {
@@ -2354,7 +2355,7 @@
        "[365 rows x 11 columns]"
       ]
      },
-     "execution_count": 120,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2369,8 +2370,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
-   "id": "1994f08e",
+   "execution_count": 17,
+   "id": "da618db3",
    "metadata": {},
    "outputs": [
     {
@@ -2994,7 +2995,7 @@
        "364      -2.550311    6.112037 -2.256137  -0.674217  "
       ]
      },
-     "execution_count": 121,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3006,8 +3007,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
-   "id": "25490862",
+   "execution_count": 18,
+   "id": "3e8725bf",
    "metadata": {},
    "outputs": [
     {
@@ -3631,7 +3632,7 @@
        "184       1.270346   -0.861559  0.645264  16.354275  "
       ]
      },
-     "execution_count": 122,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3643,7 +3644,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0ce57472",
+   "id": "3c0ea160",
    "metadata": {},
    "source": [
     "Most of the records identified as outliers seem plausible to me. The only outliers I would want to drop are the same as before: those records where Temperature==212, Flyers==-38, Sales.isin(143, 158, 235, 534).\n",
@@ -3653,8 +3654,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
-   "id": "571b2d62",
+   "execution_count": 19,
+   "id": "bcfd5df3",
    "metadata": {},
    "outputs": [
     {
@@ -3878,7 +3879,7 @@
        "364      -2.550311    6.112037 -2.256137  -0.674217  "
       ]
      },
-     "execution_count": 123,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3891,7 +3892,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1f1dfea7",
+   "id": "fe02c620",
    "metadata": {},
    "outputs": [],
    "source": []
