--- a/continuous_probabilistic_methods.ipynb
+++ b/continuous_probabilistic_methods.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "1a0385ef",
+   "id": "c8d9443e",
    "metadata": {},
    "source": [
     "# Continuous Probabilistic Methods Exercises\n",
@@ -14,7 +14,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "88d13186",
+   "id": "19720ee7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "9269020f",
+   "id": "94f0b420",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4867b2c5",
+   "id": "6639c17e",
    "metadata": {},
    "source": [
     "---\n",
@@ -58,7 +58,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "d657d281",
+   "id": "e79e7e82",
    "metadata": {},
    "outputs": [
     {
@@ -169,7 +169,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "5568b196",
+   "id": "24f44b86",
    "metadata": {},
    "outputs": [
     {
@@ -201,7 +201,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "4030e02a",
+   "id": "b1cfd351",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,7 +216,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "7c437bac",
+   "id": "668b199c",
    "metadata": {
     "scrolled": true
    },
@@ -295,7 +295,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "e9740167",
+   "id": "0aacc02a",
    "metadata": {},
    "outputs": [
     {
@@ -778,7 +778,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "a11f040c",
+   "id": "1f8b04eb",
    "metadata": {},
    "outputs": [
     {
@@ -894,7 +894,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "21dfc04a",
+   "id": "ccb733b7",
    "metadata": {},
    "source": [
     "The outlier on 12/31/17 makes sense; all values seem to be within reasonable limits. However, the outlier on 11/21/17 has a negative value for `Flyers`, which doesn't make sense since you can't have a negative amount of physical objects. Therefore, it makes sense to me to keep the outlier on 12/31/17 and to get rid of the outlier on 11/21/17 since that was probably a mistake.\n",
@@ -905,7 +905,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "a46a84bb",
+   "id": "08965e2e",
    "metadata": {},
    "outputs": [
     {
@@ -1345,7 +1345,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "4f5b6bc3",
+   "id": "7fd0b126",
    "metadata": {},
    "outputs": [
     {
@@ -1784,12 +1784,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e6bf9a8c",
+   "id": "52e6369e",
    "metadata": {},
    "source": [
     "2/11/17 has a temperature of 212 which does not make sense because that would mean a catastrophic event occurred and I doubt updating the lemonade sales for the day would be on any survivors' to-do lists. Even if the csv was updated automatically it's unlikely this occurred since there are still lemonade sales after that date, suggesting human life did not come to an end, so I would definitely drop this record. \n",
     "\n",
-    "Additionally, the last 4 outliers in the dataframe above are suspicious since no other dates have sales in the triple digits. It could be the case that the lemonade seller was invited to sell their lemonade at a Fourth of July event and had a lot more customers than usual. However, since this still isn't really representative of their normal lemonade sales I would likely drop these outliers.\n",
+    "Additionally, the last 4 outliers in the dataframe above are suspicious since no other dates have sales in the triple digits. It could be the case that the lemonade seller was invited to sell their lemonade at a Fourth of July event and had a lot more customers than usual. However, since this still isn't really representative of their normal lemonade sales I would likely drop these outliers if I were trying to make predictions about future sales.\n",
     "\n",
     "As for the higher numbers in the `Flyers` and `Rainfall` columns, I don't think these numbers are unrealistic so I would be inclined to keep those.\n",
     "\n",
@@ -1799,7 +1799,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "8784f490",
+   "id": "f9253098",
    "metadata": {},
    "outputs": [
     {
@@ -1864,7 +1864,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "98c442b9",
+   "id": "c3fe84f0",
    "metadata": {},
    "source": [
     "When using a multiplier of 3, the only lower-bound outlier is on 11/21/17 which was the day with a negative value for `Flyers`. This doesn't make sense so I wouldn't keep any of the lower-bound outliers with a multiplier of 3.\n",
@@ -1875,7 +1875,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "4d0a5564",
+   "id": "08b97499",
    "metadata": {},
    "outputs": [
     {
@@ -2028,7 +2028,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ac1faf63",
+   "id": "5efa7eb0",
    "metadata": {},
    "source": [
     "My sentiments are the same as when the multiplier was 1.5; I would only drop the first and last 4 records in the dataframe above (2/11/17 and 7/1-4/2017).\n",
@@ -2043,7 +2043,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "37833f63",
+   "id": "baa2d490",
    "metadata": {},
    "outputs": [
     {
@@ -2066,7 +2066,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "07fa9113",
+   "id": "3351be26",
    "metadata": {},
    "source": [
     "I see that Sales does not appear to be normally distributed, but I'm not sure if this is just because of the outliers. I want to look at it a little closer without those outliers."
@@ -2075,7 +2075,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "3f46809c",
+   "id": "8b11f87b",
    "metadata": {},
    "outputs": [
     {
@@ -2108,7 +2108,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c0d30323",
+   "id": "d813b4d7",
    "metadata": {},
    "source": [
     "Looks like Sales is also normally distributed, except for those pesky outliers. I'll go ahead and include it in my list of normally distributed columns."
@@ -2117,7 +2117,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "f0c82246",
+   "id": "f4618d95",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2128,7 +2128,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "9bdf45ad",
+   "id": "1e74bbb8",
    "metadata": {},
    "outputs": [
     {
@@ -2371,7 +2371,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "da618db3",
+   "id": "46c0e9ec",
    "metadata": {},
    "outputs": [
     {
@@ -3008,7 +3008,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "3e8725bf",
+   "id": "53eec60a",
    "metadata": {},
    "outputs": [
     {
@@ -3644,10 +3644,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3c0ea160",
+   "id": "bffb9773",
    "metadata": {},
    "source": [
-    "Most of the records identified as outliers seem plausible to me. The only outliers I would want to drop are the same as before: those records where Temperature==212, Flyers==-38, Sales.isin(143, 158, 235, 534).\n",
+    "Most of the records identified as outliers seem plausible to me. The only outliers I might want to drop are the same as before: those records where Temperature==212, Flyers==-38, Sales.isin(143, 158, 235, 534).\n",
     "\n",
     "### 3. Now use a 3 sigma decision rule to isolate the outliers in the normally distributed columns from `lemonade.csv`"
    ]
@@ -3655,7 +3655,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "bcfd5df3",
+   "id": "6a62beff",
    "metadata": {},
    "outputs": [
     {
@@ -3892,7 +3892,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fe02c620",
+   "id": "d147f27b",
    "metadata": {},
    "outputs": [],
    "source": []
