Added notes from review

--- a/continuous_probabilistic_methods.ipynb
+++ b/continuous_probabilistic_methods.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "c8d9443e",
+   "id": "bea75d0d",
    "metadata": {},
    "source": [
     "# Continuous Probabilistic Methods Exercises\n",
@@ -14,7 +14,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "19720ee7",
+   "id": "2057a8c8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "94f0b420",
+   "id": "73b47cb8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6639c17e",
+   "id": "3d1323fa",
    "metadata": {},
    "source": [
     "---\n",
@@ -58,7 +58,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "e79e7e82",
+   "id": "a308f2ce",
    "metadata": {},
    "outputs": [
     {
@@ -169,7 +169,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "24f44b86",
+   "id": "8dbef711",
    "metadata": {},
    "outputs": [
     {
@@ -201,7 +201,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "b1cfd351",
+   "id": "55ddbe32",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,7 +216,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "668b199c",
+   "id": "d253d9cb",
    "metadata": {
     "scrolled": true
    },
@@ -295,7 +295,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "0aacc02a",
+   "id": "11fce231",
    "metadata": {},
    "outputs": [
     {
@@ -778,7 +778,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "1f8b04eb",
+   "id": "54d8f5fe",
    "metadata": {},
    "outputs": [
     {
@@ -894,10 +894,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ccb733b7",
+   "id": "5096f174",
    "metadata": {},
    "source": [
-    "The outlier on 12/31/17 makes sense; all values seem to be within reasonable limits. However, the outlier on 11/21/17 has a negative value for `Flyers`, which doesn't make sense since you can't have a negative amount of physical objects. Therefore, it makes sense to me to keep the outlier on 12/31/17 and to get rid of the outlier on 11/21/17 since that was probably a mistake.\n",
+    "The outlier on 12/31/17 makes sense; all values seem to be within reasonable limits. However, the outlier on 11/21/17 has a negative value for `Flyers`, which doesn't make sense since you can't have a negative amount of physical objects. Therefore, it makes sense to me to keep the outlier on 12/31/17 and to either get rid of or fix the outlier on 11/21/17 by changing it to a positive number since that was probably a mistake in data entry.\n",
     "\n",
     "#### Use the IQR Range Rule and the upper and upper bounds to identify the upper outliers of each column of `lemonade.csv`, using the multiplier of 1.5. Do these upper outliers make sense? Which outliers should be kept?"
    ]
@@ -905,7 +905,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "08965e2e",
+   "id": "3831dafa",
    "metadata": {},
    "outputs": [
     {
@@ -1345,7 +1345,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "7fd0b126",
+   "id": "3274d1a4",
    "metadata": {},
    "outputs": [
     {
@@ -1784,14 +1784,14 @@
   },
   {
    "cell_type": "markdown",
-   "id": "52e6369e",
+   "id": "cbe40596",
    "metadata": {},
    "source": [
-    "2/11/17 has a temperature of 212 which does not make sense because that would mean a catastrophic event occurred and I doubt updating the lemonade sales for the day would be on any survivors' to-do lists. Even if the csv was updated automatically it's unlikely this occurred since there are still lemonade sales after that date, suggesting human life did not come to an end, so I would definitely drop this record. \n",
+    "2/11/17 has a temperature of 212 which does not make sense because that would mean a catastrophic event occurred and I doubt updating the lemonade sales for the day would be on any survivors' to-do lists. Even if the csv was updated automatically it's unlikely this occurred since there are still lemonade sales after that date, suggesting human life did not come to an end, so I would definitely not use this value. Some options could include dropping the record entirely, using forward- or backfill, or using the mean temperature of the days surrounding that record.\n",
     "\n",
     "Additionally, the last 4 outliers in the dataframe above are suspicious since no other dates have sales in the triple digits. It could be the case that the lemonade seller was invited to sell their lemonade at a Fourth of July event and had a lot more customers than usual. However, since this still isn't really representative of their normal lemonade sales I would likely drop these outliers if I were trying to make predictions about future sales.\n",
     "\n",
-    "As for the higher numbers in the `Flyers` and `Rainfall` columns, I don't think these numbers are unrealistic so I would be inclined to keep those.\n",
+    "As for the higher numbers in the `Flyers` and `Rainfall` columns, I don't think these numbers are unrealistic so I would be inclined to keep those as they are.\n",
     "\n",
     "#### Using the multiplier of 3, IQR Range Rule, and the lower bounds, identify the outliers below the lower bound in each colum of `lemonade.csv`. Do these lower outliers make sense? Which outliers should be kept?"
    ]
@@ -1799,7 +1799,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "f9253098",
+   "id": "90fddfc4",
    "metadata": {},
    "outputs": [
     {
@@ -1864,7 +1864,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c3fe84f0",
+   "id": "c46c7a00",
    "metadata": {},
    "source": [
     "When using a multiplier of 3, the only lower-bound outlier is on 11/21/17 which was the day with a negative value for `Flyers`. This doesn't make sense so I wouldn't keep any of the lower-bound outliers with a multiplier of 3.\n",
@@ -1875,7 +1875,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "08b97499",
+   "id": "9887d160",
    "metadata": {},
    "outputs": [
     {
@@ -2028,7 +2028,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5efa7eb0",
+   "id": "afd44bd4",
    "metadata": {},
    "source": [
     "My sentiments are the same as when the multiplier was 1.5; I would only drop the first and last 4 records in the dataframe above (2/11/17 and 7/1-4/2017).\n",
@@ -2043,7 +2043,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "baa2d490",
+   "id": "cd8049a4",
    "metadata": {},
    "outputs": [
     {
@@ -2066,7 +2066,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3351be26",
+   "id": "dc7dd459",
    "metadata": {},
    "source": [
     "I see that Sales does not appear to be normally distributed, but I'm not sure if this is just because of the outliers. I want to look at it a little closer without those outliers."
@@ -2075,7 +2075,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "8b11f87b",
+   "id": "e97722eb",
    "metadata": {},
    "outputs": [
     {
@@ -2108,7 +2108,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d813b4d7",
+   "id": "08e54829",
    "metadata": {},
    "source": [
     "Looks like Sales is also normally distributed, except for those pesky outliers. I'll go ahead and include it in my list of normally distributed columns."
@@ -2117,7 +2117,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "f4618d95",
+   "id": "79d44357",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2128,7 +2128,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "1e74bbb8",
+   "id": "ddd54596",
    "metadata": {},
    "outputs": [
     {
@@ -2371,7 +2371,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "46c0e9ec",
+   "id": "9cfe00b3",
    "metadata": {},
    "outputs": [
     {
@@ -3008,7 +3008,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "53eec60a",
+   "id": "2cf25cbe",
    "metadata": {},
    "outputs": [
     {
@@ -3644,7 +3644,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bffb9773",
+   "id": "c73e12ce",
    "metadata": {},
    "source": [
     "Most of the records identified as outliers seem plausible to me. The only outliers I might want to drop are the same as before: those records where Temperature==212, Flyers==-38, Sales.isin(143, 158, 235, 534).\n",
@@ -3655,7 +3655,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "6a62beff",
+   "id": "8de82a8a",
    "metadata": {},
    "outputs": [
     {
@@ -3892,7 +3892,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d147f27b",
+   "id": "a05ea6a5",
    "metadata": {},
    "outputs": [],
    "source": []
